# NextVOD_Baremetal_Hello

./: .clang-format  CMakeLists.txt  LICENSE  sh4helpers.gdb  startup_stx7105.S  startup_stx7105_init_ram.S  stx7105.ld
include/: sh4_core.h  stx7105.h  stx7105_fdma.h  stx7105_fdma_fw.h  stx7105_utils.h
src/: main.c  stx7105_exc.c  stx7105_fdma_fw.c  stx7105_utils.c  syscalls.c
tools/: pad_image.sh
tools/fdmafwextract/: README.md  fdmafwextract.c
